[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/core/SceneTransition.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://fonts/DetailText.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/TextFonts.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=6]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.472492, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.2589, 0.2589, 0.2589, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 128
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.12549, 0.286275, 0.431373, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="TextureRectBack" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1920.0
margin_right = 1080.0
margin_bottom = 840.0
rect_rotation = 90.0
texture = SubResource( 2 )
expand = true

[node name="Header" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -394.5
margin_top = -284.0
margin_right = 394.5
margin_bottom = -140.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Specte[color=red]R[/color][color=green]G[/color][color=blue]B[/color][/center]"
text = "SpecteRGB"
fit_content_height = true

[node name="SceneTransition" parent="." instance=ExtResource( 1 )]

[node name="MainMenuButtons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -95.5
margin_right = 150.0
margin_bottom = 167.5
custom_constants/separation = 40
alignment = 1

[node name="PlayButton" type="Button" parent="MainMenuButtons"]
margin_right = 300.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 5 )
text = "Play"

[node name="CreditsButton" type="Button" parent="MainMenuButtons"]
margin_top = 101.0
margin_right = 300.0
margin_bottom = 162.0
custom_fonts/font = ExtResource( 5 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="MainMenuButtons"]
margin_top = 202.0
margin_right = 300.0
margin_bottom = 263.0
custom_fonts/font = ExtResource( 5 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -340.0
margin_right = 320.0
margin_bottom = 316.0
rect_min_size = Vector2( 400, 400 )
custom_styles/panel = SubResource( 5 )

[node name="Title" type="Label" parent="CreditsPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -90.0
margin_top = 13.0
margin_right = 91.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 5 )
text = "Credits"
align = 1
valign = 1

[node name="Details" type="RichTextLabel" parent="CreditsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 22.0
margin_top = 88.0
margin_right = -18.0
margin_bottom = -88.0
custom_fonts/normal_font = ExtResource( 3 )
text = "Developers:

- Cai
- TissueInu

Other:

- RetroMagic by Kamyab Nazari
- EtcEtc"
scroll_active = false

[node name="CloseButton" type="Button" parent="CreditsPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.5
margin_top = -75.0
margin_right = 75.5
margin_bottom = -14.0
custom_colors/font_color = Color( 1, 0.494118, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Close"
icon_align = 1

[connection signal="pressed" from="MainMenuButtons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainMenuButtons/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="MainMenuButtons/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="CreditsPanel/CloseButton" to="." method="_on_CloseButton_pressed"]
